--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 	<!-- Two -->
 	<section id="two" class="wrapper style5">
 		<section class="spotlight">
-			<div class="image"><img src="perforce/images/case-study-image.png" alt="" /></div><div class="content">
+			<div class="image"><img data-layzr="image/source" src="perforce/images/case-study-image.png" alt="" /></div><div class="content">
 			<h2>Product Design:
 				Helix Sync</h2>
 				<p>The Helix product suite is a collection of projects that I worked on at Perforce. The goal of these projects was to create version control tools for the less technical user.</p>
@@ -174,6 +174,7 @@
 				</div>
 
 				<!-- Scripts -->
+				<script src="https://cdnjs.cloudflare.com/ajax/libs/layzr.js/1.4.3/layzr.min.js"></script>
 				<script src="js/jquery.min.js"></script>
 				<script src="js/jquery.scrollex.min.js"></script>
 				<script src="js/jquery.scrolly.min.js"></script>
