--- a/perforce/index.html
+++ b/perforce/index.html
@@ -57,56 +57,85 @@
 	<div class="inner">
 		
 		<div class="row">
-			<div class="5u 12u$(medium)">
+			<div class="7u 12u(medium)">
 				<h4>Helix Sync</h4>
-				<p>I'm currently working at <a href="https://perforce.com">Perforce</a> as a UX Designer! My employment was structured in such a way that design & research were conducted in 1-month product rotations. 
+				<p>I'm currently working at Perforce as a UX Designer! My employment was structured in such a way that design & research were conducted in 1-month product rotations. 
 				</p>
 				<p>My first project involved working on one of an early stage product called Helix Sync. My first task was to create a concept prototype for the product to illicit early feedback from our users. Using the prototype, a test script and task analysis we were hoping to get some early insight on the direction of our product.
 				</p>
-				<h4>TEST SETUP</h4>
-				The test itself consisted of:
-				<ol>
-					<li><b>Task Analysis with Prototype.</b> An identical task w/ both Manual/Auto modes.</li> 
-					<li><b>Pre Task Analysis Quantitative Interview.</b> Collect hard numbers and demographics.</li> 
-					<li><b>Post Task Analysis Qualatative Interview.</b> How did “X” make you feel?</li>	
-				</ol>
-				The decided goals for this particular study included:
-				<ol>
-					<b>
-						<li>Learn about people's workflows.</li> 
+			</div>
+			<div class="5u 12u$(medium)">
+				<h4>a brief history</h4>
+				<p><a href="https://perforce.com">Perforce</a> has been a leader in the version control industry since they premiered their versioning engine in 1995.
+				</p>
+				<p>Since the arrival of other versioning tools, most notably Git and Github, Perforce has struggled to stay relevant to their users. Recently they have found their niche by appealing to the game development community. 
+				</p>
+			</div>
+		</div>
+		<div class="row">
+			<div class="12u 12u$(medium)">
+				<h4>OUR TARGET USERS</h4>
+			</div>
+			<div class="4u 12u(medium)">
+				<h5>PRODUCTION ARTIST</h5>
+				<span class="image fit "><img src="images/kyu.jpg" alt=""/></span>
 
-						<li>Get the test subject to understand the product.</li> 
+			</div>
+			<div class="8u$ 12u$(medium)">
 
-						<li>See if the product aligns with their real life workflows.</li>	
-					</b>
-				</ol>	
-				We had a total of 10 total test participants. 
-				4 of them were internal Perforce customers. 6 of them were external participants.
-				<br/>
+			</div>
+			<div class="row">
+				<div class="12u 12u$(medium)">
+					<h4>test setup</h4>
+				</div>
+				<div class="6u 12u(medium)">
+					The test itself consisted of:
+					<ol>
+						<li><b>Pre Task Analysis Quantitative Interview.</b> Collect hard numbers and demographics.</li> 
+						<li><b>Task Analysis with Prototype.</b> An identical task with both Manual/Auto modes.</li> 
+						<li><b>Post Task Analysis Qualatative Interview.</b> How did “X” make you feel? </li>	
+					</ol>
+				</div>
+				<div class="6u$ 12u$(medium)">
+					The goals for this study included:
+					<ol>
+						<li><b>Learn about our target users' workflows.</b> Understand their mental models surrounding file handling/sharing</li> 
+						<li><b>Get the test subject to understand the product.</b> This included understanding both the Manual/Auto modes of the product.</li> 
+						<li><b>See which mode of the product aligns with their real life workflows.</b></li>	
+					</ol>	
+					We had a total of 10 total test participants. 
+					4 of them were internal Perforce customers. 6 of them were external participants.
+					<br/>
+				</p>
+			</div>
+			<div class="row">
+				<span class="image fit"><img src="images/bg1.png" alt=""/></span>
 
-			</p>
+				<div class="5u 12u$(medium)">
+					<!-- <blockquote>a preview of our prototype!</blockquote> -->
 
-			<blockquote><span class="big">Design artifacts below <i class="fa fa-long-arrow-down"></i></span></blockquote>
+					<h4>OUR SYNTHESIS</h4>
+					<p>To help evangelize design throughout Perforce myself and another designer fascilitated group synthesis sessions where we invited engineers & stakeholders to participate in "hands-on" synthesis.</p>
+					<p>Synthesis activities we conducted in these sessions included a <a href="https://en.wikipedia.org/wiki/Affinity_diagram">Affinity Mapping</a> of key insights/quotes from the test. Myself and another designer worked on turning those groupings into "User Needs..." statements.</p>
+					<p>By creating sets of these "User needs..." statements we were able to create actionable design recommendations from them. We decided to call these "Design Principles" as opposed to "Design Recommendations" because this product had yet to be grounded in user research–we chose to create a solid design foundation for further research to build on.</p>
+					<!-- <span class="image fit"><img src="images/HELIX WITH SOME TEXT.png" alt=""/></span> -->
+				</div>
+				<div class="7u 12u$(medium)">
+					<span class="image fit "><img src="images/synthesis.png" alt=""/></span>
+
+					<span class="image fit"><img src="images/user-needs.png" alt=""/></span>
+
+				</div>
+			</div>
+			<h4>DESIGN ARTIFACTS <i class="fa fa-long-arrow-down"></i></span></h4>
 
 			<ul class="actions vertical">
 				<li><a href="https://erchsm.github.io/helix-sync" class="button ">Concept Prototype</a></li>
-				<li><a href="https://github.com/erchsm/helix-sync/raw/gh-pages/test-script.pdf" class="button ">Test Script</a></li>
+				<li><a href="https://github.com/erchsm/helix-sync/raw/gh-pages/test-script.pdf" class="button">Test Script</a></li>
+				<li><a href="Helix Sync Research & Synthesis.pdf" class="button">A Presentation to our PM's</a></li>
+
 			</ul>
-
 		</div>
-		<div class="7u 12u$(medium)">
-			<!-- <blockquote>a preview of our prototype!</blockquote> -->
-			<span class="image fit"><img src="images/bg1.png" alt=""/></span>
-
-			<h4>OUR SYNTHESIS</h4>
-			<p>To help evangelize design through Perforce myself and another designer fascilitated group synthesis sessions where we invited engineers & stakeholders to participate in "hands-on" synthesis.</p>
-			<p>Group synthesis activities we conducted in these sessions included a <a href="https://en.wikipedia.org/wiki/Affinity_diagram">Affinity Mapping</a> of key insights/quotes from the test. Myself and another designer worked on turning those groupings into "User Needs..." statements.</p>
-			<span class="image fit"><img src="images/user-needs.png" alt=""/></span>
-			<p>By creating sets of these "User needs..." statements we were able to create actionable design recommendations from them. We decided to call these "Design Principles" as opposed to "Design Recommendations" because this product had yet to be grounded in user research–we chose to create a solid design foundation for further research to build on.</p>
-			<span class="image fit "><img src="images/synthesis.png" alt=""/></span>
-			<!-- <span class="image fit"><img src="images/HELIX WITH SOME TEXT.png" alt=""/></span> -->
-		</div>
-	</div>
 <!-- <div class="row">
 	<div class="6u 12u$(medium)">
 		<h4>Helix Cloud</h4>
