--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 	<section id="two" class="wrapper style5">
 		<section class="spotlight">
 			<div class="image"><img src="perforce/images/case-study-image.png" alt=""/></div><div class="content">
-			<h2>Product Design:
+			<h2>Visual/Interaction Design:
 				Helix Sync</h2>
 				<p>The Helix product suite is a collection of projects that I worked on at Perforce. The goal of these projects was to create version control tools for the less technical user.</p>
 				<!-- My goals for this project we're to increase accessibility -->
@@ -174,7 +174,7 @@
 				</div>
 
 				<!-- Scripts -->
-				<script src="js/jquery.lazyloadxt.js"></script>
+				<!-- // <script src="js/jquery.lazyloadxt.js"></script> -->
 				<script src="js/jquery.min.js"></script>
 				<script src="js/jquery.scrollex.min.js"></script>
 				<script src="js/jquery.scrolly.min.js"></script>
