--- a/perforce/index.html
+++ b/perforce/index.html
@@ -18,6 +18,7 @@
 <body>
 
 	<script src="../js/md5.js" type="text/javascript"></script> 
+
 	<!-- Page Wrapper -->
 	<div id="page-wrapper">
 
@@ -59,31 +60,53 @@
 		<div class="row">
 			<div class="7u 12u(medium)">
 				<h4>Helix Sync</h4>
-				<p>I'm currently working at Perforce as a UX Designer! My employment was structured in such a way that design & research were conducted in 1-month product rotations. 
+				<p>In my position at Perforce as a UX Designer my employment was structured in such a way that design & research were conducted in 1-month product rotations. 
 				</p>
-				<p>My first project involved working on one of an early stage product called Helix Sync. My first task was to create a concept prototype for the product to illicit early feedback from our users. Using the prototype, a test script and task analysis we were hoping to get some early insight on the direction of our product.
+				<p>My first project rotation involved working on an early stage product called <b>Helix Sync</b>. My first task was to create a concept prototype for the product to illicit early feedback from our users. Using task analysis with the prototype and user interviews we were able to get some early insight on the direction of our product.
+				</p>
+				<h4>my role</h4>
+				<p>My main role on this project involved creating the visual designs and prototype. In the user research phase I worked closely with another designer to help schedule and fascilitate most of the sessions. I also led group synthesis sessions at the end of the project.
 				</p>
 			</div>
 			<div class="5u 12u$(medium)">
 				<h4>a brief history</h4>
-				<p><a href="https://perforce.com">Perforce</a> has been a leader in the version control industry since they premiered their versioning engine in 1995.
+				<span class="image right "><img src="images/perforce-logo.jpg" alt=""/></span>
+				<p><a href="https://perforce.com">Perforce</a> has been a leader in the version control industry since they premiered their <a href="https://www.youtube.com/watch?v=_yQlKEq-Ueg">centralized</a> versioning engine in 1995.
 				</p>
-				<p>Since the arrival of other versioning tools, most notably Git and Github, Perforce has struggled to stay relevant to their users. Recently they have found their niche by appealing to the game development community. 
+				<p>Since the arrival of <a href="https://en.wikipedia.org/wiki/Distributed_revision_control">DVCS</a> versioning tools, most notably Git and Github, Perforce has struggled to stay relevant to their users. Recently they have found their niche by appealing to the game development community. 
 				</p>
 			</div>
 		</div>
 		<div class="row">
 			<div class="12u 12u$(medium)">
-				<h4>OUR TARGET USERS</h4>
+				<h4>our target users</h4>
 			</div>
-			<div class="4u 12u(medium)">
-				<h5>PRODUCTION ARTIST</h5>
-				<span class="image fit "><img src="images/kyu.jpg" alt=""/></span>
+			<div class="6u 12u(medium)">
+				<p>
+					We saw an opportunity within the game development industry to create a product for <b>"Technical-minded" Game Designers/Artists</b>.
+				</p>
+				Research from a prior user testing with these Designers revealed that they currently don't have a way to:
+				<ol>
+					<li>Collaborate <b>easily</b> and <b>effectively</b>  with game developers.</b></li> 
+					<li>Version their assets in a way that <b>fits their mental model</b> and <b>integrates with their current tools.</b></li> 
+				</ol>
+			</div>
+			<div class="6u$ 12u$(medium)">
+				<span class="image fit"><img src="images/user-groups.svg" alt=""/></span>
 
 			</div>
-			<div class="8u$ 12u$(medium)">
+
+			<div class="row">
+			<div class="12u 12u$(medium)">
+				<h4>the concept</h4>
+			</div>
+			<div class="6u 12u(medium)">
 
 			</div>
+			<div class="6u$ 12u$(medium)">
+
+			</div>
+			
 			<div class="row">
 				<div class="12u 12u$(medium)">
 					<h4>test setup</h4>
@@ -116,7 +139,7 @@
 
 					<h4>OUR SYNTHESIS</h4>
 					<p>To help evangelize design throughout Perforce myself and another designer fascilitated group synthesis sessions where we invited engineers & stakeholders to participate in "hands-on" synthesis.</p>
-					<p>Synthesis activities we conducted in these sessions included a <a href="https://en.wikipedia.org/wiki/Affinity_diagram">Affinity Mapping</a> of key insights/quotes from the test. Myself and another designer worked on turning those groupings into "User Needs..." statements.</p>
+					<p>In these sessions we conducted a <a href="https://en.wikipedia.org/wiki/Affinity_diagram">Affinity Mapping</a> of key insights/quotes from the test. Myself and another designer worked on turning those groupings into "User Needs..." statements.</p>
 					<p>By creating sets of these "User needs..." statements we were able to create actionable design recommendations from them. We decided to call these "Design Principles" as opposed to "Design Recommendations" because this product had yet to be grounded in user research–we chose to create a solid design foundation for further research to build on.</p>
 					<!-- <span class="image fit"><img src="images/HELIX WITH SOME TEXT.png" alt=""/></span> -->
 				</div>
