--- a/perforce/index.html
+++ b/perforce/index.html
@@ -97,68 +97,78 @@
 			</div>
 
 			<div class="row">
-			<div class="12u 12u$(medium)">
-				<h4>the concept</h4>
-			</div>
-			<div class="6u 12u(medium)">
-
-			</div>
-			<div class="6u$ 12u$(medium)">
-
-			</div>
-			
-			<div class="row">
 				<div class="12u 12u$(medium)">
-					<h4>test setup</h4>
+					<h4>the concept</h4>
 				</div>
-				<div class="6u 12u(medium)">
-					The test itself consisted of:
-					<ol>
-						<li><b>Pre Task Analysis Quantitative Interview.</b> Collect hard numbers and demographics.</li> 
-						<li><b>Task Analysis with Prototype.</b> An identical task with both Manual/Auto modes.</li> 
-						<li><b>Post Task Analysis Qualatative Interview.</b> How did “X” make you feel? </li>	
-					</ol>
+				<div class="5u 12u(medium)">
+					<b>MANUAL UPLOAD</b>
+					<span class="image fit"><img src="images/manual.gif" alt=""/></span>
+					<b>AUTO UPLOAD</b>
+					<span class="image fit"><img src="images/auto.gif" alt=""/></span>
 				</div>
-				<div class="6u$ 12u$(medium)">
-					The goals for this study included:
-					<ol>
-						<li><b>Learn about our target users' workflows.</b> Understand their mental models surrounding file handling/sharing</li> 
-						<li><b>Get the test subject to understand the product.</b> This included understanding both the Manual/Auto modes of the product.</li> 
-						<li><b>See which mode of the product aligns with their real life workflows.</b></li>	
-					</ol>	
-					We had a total of 10 total test participants. 
-					4 of them were internal Perforce customers. 6 of them were external participants.
-					<br/>
-				</p>
+				<div class="7u$ 12u$(medium)">
+					<p>
+						The intial concept for Helix Sync was for it to be a "Sync and Share" Solution. Much of the feedback we we're looking for from our users was about what mode of the product worked best for them. 
+					</p>
+					<p>
+						Helix Sync has this idea of <b>Manual Upload vs. Auto Upload</b>. Auto upload would follow a similar sharing paradigm to Dropbox, Google Drive, Box, etc. while Manual would allow them explicit control over when files are synced. 
+					</p>
+				</div>
+
+				<div class="row">
+					<div class="12u 12u$(medium)">
+						<h4>test setup</h4>
+					</div>
+					<div class="6u 12u(medium)">
+						The test itself consisted of:
+						<ol>
+							<li><b>Pre Task Analysis Quantitative Interview.</b> Collect hard numbers and demographics.</li> 
+							<li><b>Task Analysis with Prototype.</b> An identical task with both Manual/Auto modes.</li> 
+							<li><b>Post Task Analysis Qualatative Interview.</b> How did “X” make you feel? </li>	
+						</ol>
+					</div>
+					<div class="6u$ 12u$(medium)">
+						The goals for this study included:
+						<ol>
+							<li><b>Learn about our target users' workflows.</b> Understand their mental models surrounding file handling/sharing</li> 
+							<li><b>Get the test subject to understand the product.</b> This included understanding both the Manual/Auto modes of the product.</li> 
+							<li><b>See which mode of the product aligns with their real life workflows.</b></li>	
+						</ol>	
+						<br/>
+					</div>
+					<p>
+						We had a total of 10 total test participants. 
+						4 of them were internal Perforce customers. 6 of them were external participants.
+					</p>
+				</div>
+				<div class="row">
+					<span class="image fit"><img src="images/bg1.png" alt=""/></span>
+
+					<div class="5u 12u$(medium)">
+						<!-- <blockquote>a preview of our prototype!</blockquote> -->
+
+						<h4>OUR SYNTHESIS</h4>
+						<p>To help evangelize design throughout Perforce myself and another designer fascilitated group synthesis sessions where we invited engineers & stakeholders to participate in "hands-on" synthesis.</p>
+						<p>In these sessions we conducted a <a href="https://en.wikipedia.org/wiki/Affinity_diagram">Affinity Mapping</a> of key insights/quotes from the test. Myself and another designer worked on turning those groupings into "User Needs..." statements.</p>
+						<p>By creating sets of these "User needs..." statements we were able to create actionable design recommendations from them. We decided to call these "Design Principles" as opposed to "Design Recommendations" because this product had yet to be grounded in user research–we chose to create a solid design foundation for further research to build on.</p>
+						<!-- <span class="image fit"><img src="images/HELIX WITH SOME TEXT.png" alt=""/></span> -->
+					</div>
+					<div class="7u 12u$(medium)">
+						<span class="image fit "><img src="images/synthesis.png" alt=""/></span>
+
+						<span class="image fit"><img src="images/user-needs.png" alt=""/></span>
+
+					</div>
+				</div>
+				<h4>DESIGN ARTIFACTS <i class="fa fa-long-arrow-down"></i></span></h4>
+
+				<ul class="actions vertical">
+					<li><a href="https://erchsm.github.io/helix-sync" class="button ">Concept Prototype</a></li>
+					<li><a href="https://github.com/erchsm/helix-sync/raw/gh-pages/test-script.pdf" class="button">Test Script</a></li>
+					<li><a href="Helix Sync Research & Synthesis.pdf" class="button">A Presentation to our PM's</a></li>
+
+				</ul>
 			</div>
-			<div class="row">
-				<span class="image fit"><img src="images/bg1.png" alt=""/></span>
-
-				<div class="5u 12u$(medium)">
-					<!-- <blockquote>a preview of our prototype!</blockquote> -->
-
-					<h4>OUR SYNTHESIS</h4>
-					<p>To help evangelize design throughout Perforce myself and another designer fascilitated group synthesis sessions where we invited engineers & stakeholders to participate in "hands-on" synthesis.</p>
-					<p>In these sessions we conducted a <a href="https://en.wikipedia.org/wiki/Affinity_diagram">Affinity Mapping</a> of key insights/quotes from the test. Myself and another designer worked on turning those groupings into "User Needs..." statements.</p>
-					<p>By creating sets of these "User needs..." statements we were able to create actionable design recommendations from them. We decided to call these "Design Principles" as opposed to "Design Recommendations" because this product had yet to be grounded in user research–we chose to create a solid design foundation for further research to build on.</p>
-					<!-- <span class="image fit"><img src="images/HELIX WITH SOME TEXT.png" alt=""/></span> -->
-				</div>
-				<div class="7u 12u$(medium)">
-					<span class="image fit "><img src="images/synthesis.png" alt=""/></span>
-
-					<span class="image fit"><img src="images/user-needs.png" alt=""/></span>
-
-				</div>
-			</div>
-			<h4>DESIGN ARTIFACTS <i class="fa fa-long-arrow-down"></i></span></h4>
-
-			<ul class="actions vertical">
-				<li><a href="https://erchsm.github.io/helix-sync" class="button ">Concept Prototype</a></li>
-				<li><a href="https://github.com/erchsm/helix-sync/raw/gh-pages/test-script.pdf" class="button">Test Script</a></li>
-				<li><a href="Helix Sync Research & Synthesis.pdf" class="button">A Presentation to our PM's</a></li>
-
-			</ul>
-		</div>
 <!-- <div class="row">
 	<div class="6u 12u$(medium)">
 		<h4>Helix Cloud</h4>
