--- a/perforce/index.html
+++ b/perforce/index.html
@@ -108,7 +108,7 @@
 				</div>
 				<div class="7u$ 12u$(medium)">
 					<p>
-						The intial concept for Helix Sync was for it to be a "Sync and Share" Solution. Much of the feedback we we're looking for from our users was about what mode of the product worked best for them. 
+						The intial concept for Helix Sync was for it to be a Desktop "Sync and Share" Solution. Much of the feedback we we're looking for from our users in this first round of research was about what mode of the product worked best for them. 
 					</p>
 					<p>
 						Helix Sync has this idea of <b>Manual Upload vs. Auto Upload</b>. Auto upload would follow a similar sharing paradigm to Dropbox, Google Drive, Box, etc. while Manual would allow them explicit control over when files are synced. 
