--- a/perforce/index.html
+++ b/perforce/index.html
@@ -99,11 +99,12 @@
 			<div class="row">
 				<div class="12u 12u$(medium)">
 					<h4>the concept</h4>
+					<span class="image fit"><img src="images/bg1.png" alt=""/></span>
 				</div>
 				<div class="5u 12u(medium)">
-					<b>MANUAL UPLOAD</b>
+					<!-- <b>MANUAL UPLOAD</b> -->
 					<span class="image fit"><img src="images/manual.gif" alt=""/></span>
-					<b>AUTO UPLOAD</b>
+					<!-- <b>AUTO UPLOAD</b> -->
 					<span class="image fit"><img src="images/auto.gif" alt=""/></span>
 				</div>
 				<div class="7u$ 12u$(medium)">
@@ -142,7 +143,7 @@
 					</p>
 				</div>
 				<div class="row">
-					<span class="image fit"><img src="images/bg1.png" alt=""/></span>
+					
 
 					<div class="5u 12u$(medium)">
 						<!-- <blockquote>a preview of our prototype!</blockquote> -->
@@ -154,8 +155,8 @@
 						<!-- <span class="image fit"><img src="images/HELIX WITH SOME TEXT.png" alt=""/></span> -->
 					</div>
 					<div class="7u 12u$(medium)">
+						<span class="image fit "><img src="images/sean.png" alt=""/></span>
 						<span class="image fit "><img src="images/synthesis.png" alt=""/></span>
-
 						<span class="image fit"><img src="images/user-needs.png" alt=""/></span>
 
 					</div>
