--- a/perforce/index.html
+++ b/perforce/index.html
@@ -85,7 +85,7 @@
 				<p>
 					We saw an opportunity within the game development industry to create a product for <b>"Technical-minded" Game Designers/Artists</b>.
 				</p>
-				Research from a prior user testing with these Designers revealed that they currently don't have a way to:
+				Information from prior user research with these Designers revealed that they currently don't have a way to:
 				<ol>
 					<li>Collaborate <b>easily</b> and <b>effectively</b>  with game developers.</b></li> 
 					<li>Version their assets in a way that <b>fits their mental model</b> and <b>integrates with their current tools.</b></li> 
