perforce content added

--- a/content-mutual/index.html
+++ b/content-mutual/index.html
@@ -60,6 +60,7 @@
 				<h3>Content Mutual</h3>
 				<p>Coming soon!
 				</p>
+				<span class="image fit"><img src="images/wrap.svg" alt=""/></span>
 			</div>
 			<!-- <div class="6u 12u$(medium)">
 				<span class="image fit"><img src="images/HELIX  INVERSE.png" alt=""/></span>
