google design stuff added

--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
 	<section id="two" class="wrapper style5">
 		<section class="spotlight">
 			<div class="image"><img src="perforce/images/case-study-image.png" alt=""/></div><div class="content">
-			<h2>Visual/Interaction Design:
-				Helix Sync</h2>
+			<h2>UX Design:
+				Helix Product Suite</h2>
 				<p>The Helix product suite is a collection of projects that I worked on at Perforce. The goal of these projects was to create version control tools for the less technical user.</p>
 				<!-- My goals for this project we're to increase accessibility -->
 				<ul class="actions">
@@ -95,12 +95,12 @@
 			</div>
 		</section>
 		<section class="spotlight">
-			<div class="image"><img src="content-mutual/images/case-study-image.png" alt="" /></div><div class="content">
-			<h2>UX Research:<br />
-				Content Mutual</h2>
-				<p>High-level business strategy re-design for a very young startup called Content Mutual. By conducting extensive user research, we aligned user and business goals by implementing social feed components.</p>
+			<div class="image"><img src="google/images/case-study-image.png" alt="" /></div><div class="content">
+			<h2>Interaction Design:<br />
+				Google Design Challenge</h2>
+				<p>Preparing your own garage sale is often a daunting task. It’s also difficult for potential buyers to discover your merchandise. I designed an experience that makes it easier for sellers to intelligently inventory their goods, and helps bargain hunters find the needle in a haystack.</p>
 				<ul class="actions">
-					<li><a href="content-mutual/" class="button fit">Learn More</a></li>
+					<li><a href="google-design/" class="button fit">Learn More</a></li>
 				</ul>
 			</div>
 		</section>
