--- a/perforce/index.html
+++ b/perforce/index.html
@@ -62,10 +62,10 @@
 				<h4>Helix Sync</h4>
 				<p>In my position at Perforce as a UX Designer my employment was structured in such a way that design & research were conducted in 1-month product rotations. 
 				</p>
-				<p>My first project rotation involved working on an early stage product called <b>Helix Sync</b>. My first task was to create a concept prototype for the product to illicit early feedback from our users. Using task analysis with the prototype and user interviews we were able to get some early insight on the direction of our product.
+				<p>My first project rotation involved working on an early stage product called <b>Helix Sync</b>. My first task was to create a concept prototype for the product to elicit early feedback from our users. Using task analysis with the prototype and user interviews we were able to get some early insight on the direction of our product.
 				</p>
 				<h4>my role</h4>
-				<p>My main role on this project involved creating the visual designs and prototype. In the user research phase I worked closely with another designer to help schedule and fascilitate most of the sessions. I also led group synthesis sessions at the end of the project.
+				<p>My main role on this project involved creating the visual designs and prototype. In the user research phase I worked closely with another designer to help schedule and facilitate most of the sessions. I also led group synthesis sessions at the end of the project.
 				</p>
 			</div>
 			<div class="5u 12u$(medium)">
@@ -157,6 +157,7 @@
 					</div>
 					<div class="7u 12u$(medium)">
 						<span class="image fit "><img src="images/sean.png" alt=""/></span>
+						<span class="image fit "><img src="images/eric.png" alt=""/></span>
 						<span class="image fit "><img src="images/synthesis.png" alt=""/></span>
 						<span class="image fit"><img src="images/user-needs.png" alt=""/></span>
 
