--- a/google-design/index.html
+++ b/google-design/index.html
@@ -16,7 +16,8 @@
 	<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
 </head>
 <body>
-	<script src="../js/md5.js" type="text/javascript"></script>
+	<!-- // <script src="../js/md5.js" type="text/javascript"></script> -->
+	<script src="../js/sha256.js" type="text/javascript"></script>
 	<!-- Page Wrapper -->
 	<div id="page-wrapper">
 
@@ -129,45 +130,45 @@
 
 								<h3>the more the merrier!</h3>
 								<p><strong>Key Finding:</strong> 
-								Almost all of the sales I came across had groups of people running them. This group in particular were really enjoying themselves.
-							</p>
-							<p>
-								<strong>My Takeaway:</strong> When planning a yard sale, salespeople almost never do it solo. Having more for sale attracts more customers, so trying to get your friends to bring their wares is always a "win-win".
-							</p>
-						</div>
-					</div>
-					<div class="row">
-						<div class="6u 12u(medium)">
-							<span class="image fit"><img src="images/lyft.png" alt=""/>
-							</span>
-						</div>
-						<div class="6u$ 12u$(medium)">
-
-							<h3>the more the merrier!</h3>
-							<p>
-								<strong>Key Finding:</strong> 
-								This group was attempting to target a particular person to buy this box by posting a picture of the item in a Private Lyft Driver Facebook group
-							</p>
-							<p>
-
+									Almost all of the sales I came across had groups of people running them. This group in particular were really enjoying themselves.
+								</p>
 								<p>
 									<strong>My Takeaway:</strong> When planning a yard sale, salespeople almost never do it solo. Having more for sale attracts more customers, so trying to get your friends to bring their wares is always a "win-win".
 								</p>
 							</div>
 						</div>
-						
-					</section>
+						<div class="row">
+							<div class="6u 12u(medium)">
+								<span class="image fit"><img src="images/lyft.png" alt=""/>
+								</span>
+							</div>
+							<div class="6u$ 12u$(medium)">
 
-				</article>
+								<h3>the more the merrier!</h3>
+								<p>
+									<strong>Key Finding:</strong> 
+									This group was attempting to target a particular person to buy this box by posting a picture of the item in a Private Lyft Driver Facebook group
+								</p>
+								<p>
 
-				<!-- Footer -->
-				<footer id="footer">
-					<ul class="icons">
-						<li><a href="https://linkedin.com/in/erchsm" class="icon fa-linkedin"><span class="label">Facebook</span></a></li>
-						<li><a href="https://www.flickr.com/photos/erchsm/" class="icon fa-flickr"><span class="label">Flickr</span></a></li>
-						<li><a href="https://instagram.com/erchsm/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="https://github.com/erchsm" class="icon fa-github"><span class="label">Github</span></a></li>
-					</ul>
+									<p>
+										<strong>My Takeaway:</strong> When planning a yard sale, salespeople almost never do it solo. Having more for sale attracts more customers, so trying to get your friends to bring their wares is always a "win-win".
+									</p>
+								</div>
+							</div>
+
+						</section>
+
+					</article>
+
+					<!-- Footer -->
+					<footer id="footer">
+						<ul class="icons">
+							<li><a href="https://linkedin.com/in/erchsm" class="icon fa-linkedin"><span class="label">Facebook</span></a></li>
+							<li><a href="https://www.flickr.com/photos/erchsm/" class="icon fa-flickr"><span class="label">Flickr</span></a></li>
+							<li><a href="https://instagram.com/erchsm/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+							<li><a href="https://github.com/erchsm" class="icon fa-github"><span class="label">Github</span></a></li>
+						</ul>
 	<!-- <ul class="copyright">
 		<li>&copy; Eric Smith</li><li>Design: Inspired from HTML5UP</li>
 	</ul>
