--- a/google-design/prototype/index.html
+++ b/google-design/prototype/index.html
@@ -96,7 +96,7 @@
           <ul class="mdl-menu mdl-menu--bottom-right mdl-js-menu mdl-js-ripple-effect" for="accbtn">
             <li class="mdl-menu__item">hello@example.com</li>
             <li class="mdl-menu__item">info@example.com</li>
-            <li class="mdl-menu__item"><i class="material-icons">add</i>Add another account...</li>
+            <li class="mdl-menu__item"><i class="material-icons">add</i>Add a friend...</li>
           </ul>
         </div>
       </header>
