more work on google design

--- a/google-design/index.html
+++ b/google-design/index.html
@@ -16,7 +16,6 @@
 	<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
 </head>
 <body>
-	<!-- // <script src="../js/md5.js" type="text/javascript"></script> -->
 	<script src="../js/sha256.js" type="text/javascript"></script>
 	<!-- Page Wrapper -->
 	<div id="page-wrapper">
@@ -83,7 +82,7 @@
 								<h3>CONTEXTUAL INQUIRY</h3>
 
 							</div>			
-							<div class="5u 12u(medium)">
+							<div class="6u 12u(medium)">
 								<p>
 									I decided to venture out and do some contextual inquiry at a few yard sales I found around Oakland via Craigslist.
 								</p>
@@ -94,7 +93,7 @@
 									keep in mind that these were not the questions I asked real people.
 								</p>
 							</div>
-							<div class="7u$ 12u$(medium)">
+							<div class="6u$ 12u$(medium)">
 								<h4>SALESPERSON</h4>
 								<ol>
 									<li>Before the sale how do they typically decide what to sell? How do they <b>organize</b> and <b>inventory</b> their goods?</li>
@@ -108,7 +107,7 @@
 								<!-- <span class="image fit"><img src="images/wrap.svg" alt=""/></span> -->
 							</div>
 						</div>
-						<div class="row">
+						<!-- <div class="row">
 							<div class="7u 12u(medium)">
 								<span class="image fit"><img src="images/headless.png" alt=""/></span>
 								<span class="image fit"><img src="images/sale.png" alt=""/></span>
@@ -117,7 +116,7 @@
 								<span class="image fit"><img src="images/girl2.png" alt=""/></span>
 								<span class="image fit"><img src="images/lyft.png" alt=""/></span>
 							</div>
-						</div>
+						</div> -->
 						<div class="row">
 							<div class="12u$ 12u$(medium)">
 								<h3>KEY FINDINGS / TAKEAWAYS</h3>
@@ -137,6 +136,7 @@
 								</p>
 							</div>
 						</div>
+
 						<div class="row">
 							<div class="6u 12u(medium)">
 								<span class="image fit"><img src="images/lyft.png" alt=""/>
@@ -144,19 +144,56 @@
 							</div>
 							<div class="6u$ 12u$(medium)">
 
-								<h3>the more the merrier!</h3>
+								<h3>Craigslist & Facebook Use</h3>
 								<p>
-									<strong>Key Finding:</strong> 
-									This group was attempting to target a particular person to buy this box by posting a picture of the item in a Private Lyft Driver Facebook group
+									<strong>Key Finding:</strong>
+
+									All salespeople I interviewed had advertised their yard sale on social media. <b>Craiglist was the most commonly used, with Facebook close behind.</b>
+								</p>
+								<p>
+									The surprising find for me here was that all the posts were <b>"picture less"</b>. All sales people said they would have posted pictures if they had time.
 								</p>
 								<p>
 
 									<p>
-										<strong>My Takeaway:</strong> When planning a yard sale, salespeople almost never do it solo. Having more for sale attracts more customers, so trying to get your friends to bring their wares is always a "win-win".
+										<strong>My Takeaway:</strong> I was inspired by the idea of sharing a list of items with a selected group via social media.
 									</p>
 								</div>
 							</div>
+							<div class="row">
+								<div class="6u 12u(medium)">
+									<span class="image fit"><img src="images/headless.png" alt=""/>
+									</span>
+								</div>
+								<div class="6u$ 12u$(medium)">
 
+									<h3>Sharing via Social Media</h3>
+									<p>
+										<strong>Key Finding:</strong>
+										This group of salespeople were attempting to target a particular type of person to buy this box of goodies by posting a picture of the item in a Private Lyft Driver Facebook group.
+									</p>
+									<p>
+										<strong>My Takeaway:</strong> I was inspired by the idea of sharing a list of items with a selected group via social media.
+									</p>
+								</div>
+							</div>
+							<div class="row">
+								<div class="6u 12u(medium)">
+									<span class="image fit"><img src="images/girl2.png" alt=""/>
+									</span>
+								</div>
+								<div class="6u$ 12u$(medium)">
+
+									<h3>Prices are changing all the time!</h3>
+									<p>
+										<strong>Key Finding:</strong>
+										This group of salespeople were attempting to target a particular type of person to buy this box of goodies by posting a picture of the item in a Private Lyft Driver Facebook group.
+									</p>
+									<p>
+										<strong>My Takeaway:</strong> I was inspired by the idea of sharing a list of items with a selected group via social media.
+									</p>
+								</div>
+							</div>
 						</section>
 
 					</article>
