--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 								<li><a href=".">Home</a></li>
 								<li><a href="../perforce/">Perforce</a></li>
 								<li><a href="../givjoy/">GivJoy</a></li>
-								<li><a href="../content-mutual/">Content Mutual</a></li>
+								<li><a href="../google-design/">Google Design</a></li>
 								<li><a href="../scholastic/">Scholastic</a></li>
 								<li><a href="../cisco/">Cisco</a></li>
 								<li><a href="https://github.com/erchsm/M-E">M&E</a></li>
@@ -95,7 +95,7 @@
 			</div>
 		</section>
 		<section class="spotlight">
-			<div class="image"><img src="google/images/case-study-image.png" alt="" /></div><div class="content">
+			<div class="image"><img src="google-design/images/case-study-image.png" alt="" /></div><div class="content">
 			<h2>Interaction Design:<br />
 				Google Design Challenge</h2>
 				<p>Preparing your own garage sale is often a daunting task. It’s also difficult for potential buyers to discover your merchandise. I designed an experience that makes it easier for sellers to intelligently inventory their goods, and helps bargain hunters find the needle in a haystack.</p>
