--- a/cisco/index.html
+++ b/cisco/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-	<script src="../js/md5.js" type="text/javascript"></script>
+	<script src="../js/sha256.js" type="text/javascript"></script>
 
 	<header id="header" >
 		<h1><a href="index.html"></a></h1>
