--- a/google-design/prototype/index.html
+++ b/google-design/prototype/index.html
@@ -58,6 +58,7 @@
     }
   </style>
 </head>
+<script src="../../js/sha256.js" type="text/javascript"></script>
 <body>
   <div class="demo-layout mdl-layout mdl-js-layout mdl-layout--fixed-drawer mdl-layout--fixed-header">
     <header class="demo-header mdl-layout__header mdl-color--white mdl-color--grey-100 mdl-color-text--grey-600">
@@ -117,21 +118,21 @@
     <main class="mdl-layout__content mdl-color--grey-100">
       <div class="mdl-grid demo-content">
         <div class="demo-updates mdl-card mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-grid">
-            <div class="mdl-card__title mdl-card--expand mdl-color--teal-300">
-              <h2 class="mdl-card__title-text mdl-color-text--white">Selling a ton of really cool antiques!!</h2>
-            </div>
-            <div class="mdl-card__supporting-text mdl-color-text--grey-600">
-              Enim labore aliqua consequat ut quis ad occaecat aliquip incididunt. Sunt nulla eu enim irure enim nostrud aliqua consectetur ad consectetur sunt ullamco officia. Ex officia laborum et consequat duis.
-            </div>
-            <div class="mdl-card__supporting-text mdl-card--border meta mdl-color-text--grey-600">
-              <div class="minilogo"></div>
-              <div>
-                <strong>The Newist</strong>
-                <span>2 days ago</span>
-              </div>
-
-            </div>
+          <div class="mdl-card__title mdl-card--expand mdl-color--teal-300">
+            <h2 class="mdl-card__title-text mdl-color-text--white">Selling a motorcycle, 2 chairs, bar stools and more!</h2>
           </div>
+          <div class="mdl-card__supporting-text mdl-color-text--grey-600">
+          Lo-fi Pitchfork tousled McSweeney's actually keffiyeh, Carles cold-pressed health goth chia. DIY lo-fi keffiyeh leggings literally fixie artisan ennui. Deep v swag scenester retro, Portland lomo organic pour-over lo-fi Etsy Tumblr Bushwick stumptown.
+          </div>
+          <div class="mdl-card__supporting-text mdl-card--border meta mdl-color-text--grey-600">
+            <div class="minilogo"></div>
+            <div>
+              <strong>Hosted by:</strong>
+              <span>You, Sharon and <u>3 more</u></span>
+            </div>
+
+          </div>
+        </div>
 
         <div class="demo-cards mdl-color--white mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-grid">
           <div class="mdl-card on-the-road-again mdl-cell mdl-cell--12-col">
